Finish static pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,5 +11,9 @@
 
   <body>
     <%= yield %>
+
+  <footer class="footer center">
+    <small>&copy; Ruby Garage</small>
+  </footer>
   </body>
 </html>
