--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
 <div class="center jumbotron">
   <h1>SIMPLE TODO LISTS</h1>
-  <%= link_to "Add TODO List", '#', class: "btn btn-lg btn-primary" %>
+  <%= link_to "Add TODO List", todo_path, class: "btn btn-lg btn-primary" %>
 </div>
