--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,14 @@
   </head>
 
   <body>
+    <div class="container">
     <%= yield %>
-
+      <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <% end %>
   <footer class="footer center">
     <small>&copy; Ruby Garage</small>
   </footer>
+   </div>
   </body>
 </html>
