--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,2 +1,14 @@
-<h1>Add TODO</h1>
-<p>This will be a page for new TODO List.</p>
+<h1>Add TODO List</h1>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_with(model: @project, local: true) do |f| %>
+      <%= render 'shared/error_messages' %>
+
+      <%= f.label :name %>
+      <%= f.text_field :name, class: 'form-control'  %>
+
+      <%= f.submit "Create TODO List", class: "btn btn-primary" %>
+    <% end %>
+  </div>
+</div>
