Complete edit/delete project

--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,5 +1,5 @@
-<% provide(:button_text, 'Create TODO List') %>
-<h1>Add TODO List</h1>
+<% provide(:button_text, 'Save changes') %>
+<h1>Edit your TODO List</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= render 'form' %>
