--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,16 +1,24 @@
 <% @projects.each do |project| %>
   <div class="row">
+    <div class="col-md-1"><span class="glyphicon glyphicon-calendar"></span></div>
     <div class="col-md-8" align="center" ><%= project.name %></div>
-    <div class="col-md-2"><%= link_to "Edit", edit_project_path(project) %></div>
-    <div class="col-md-2"><%= link_to "Destroy", project, method: :delete, data: { confirm: "Are you sure?" } %></div>
+    <div class="col-md-1">
+       <%= link_to "<span class='glyphicon glyphicon-pencil'></span>".html_safe, edit_project_path(project) %> 
+    </div>
+    <div class="col-md-1">
+      <%= link_to "<span class='glyphicon glyphicon-trash'></span>".html_safe, project, method: :delete, data: { confirm: "Are you sure?" } %>
+    </div>
   </div>
 <br>
 
   <form class="inline-form row">
+    <div class="col-md-1">
+      <span class="glyphicon glyphicon-plus"></span>
+    </div>
     <div class="col-md-8">
       <input type="text" id="task_name" class="form-control" placeholder="Start typing here to create a task...">    
     </div>    
-    <div class="col-md-4">
+    <div class="col-md-3">
       <button type="button" class="btn btn-success">Add Task</button>
     </div>
   </form>
