--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,28 +1,49 @@
-<% @projects.each do |project| %>
-  <div class="row">
-    <div class="col-md-1"><span class="glyphicon glyphicon-calendar"></span></div>
-    <div class="col-md-8" align="center" ><%= project.name %></div>
-    <div class="col-md-1">
-       <%= link_to "<span class='glyphicon glyphicon-pencil'></span>".html_safe, edit_project_path(project) %> 
+<div class="center jumbotron">
+  <h1>SIMPLE TODO LISTS</h1>
+  <br>
+  <br>
+  <% @projects.each do |project| %>
+    <div class="row" id="project-header-row">
+      <div class="col-md-1"><span class="glyphicon glyphicon-calendar"></span></div>
+      <div class="col-md-8" id="project-name-cell"><%= project.name %></div>
+      <div class="col-md-1">
+        <%= link_to "<span class='glyphicon glyphicon-pencil'></span>".html_safe, edit_project_path(project) %>
+      </div>
+      <div class="col-md-1">
+        <%= link_to "<span class='glyphicon glyphicon-trash'></span>".html_safe, project, method: :delete, data: {confirm: "Are you sure?"} %>
+      </div>
     </div>
-    <div class="col-md-1">
-      <%= link_to "<span class='glyphicon glyphicon-trash'></span>".html_safe, project, method: :delete, data: { confirm: "Are you sure?" } %>
-    </div>
-  </div>
-<br>
 
-  <form class="inline-form row">
+    <div class="row" id="add-task-row">
     <div class="col-md-1">
       <span class="glyphicon glyphicon-plus"></span>
     </div>
-    <div class="col-md-8">
-      <input type="text" id="task_name" class="form-control" placeholder="Start typing here to create a task...">    
-    </div>    
-    <div class="col-md-3">
-      <button type="button" class="btn btn-success">Add Task</button>
+    <%= form_with(url: project_tasks_path(project), local: true) do |f| %>
+      <div class="col-md-9">
+        <%= f.text_field :name, class: 'form-control', placeholder: "Start typing here to create a task..." %>
+      </div>
+      <div class="col-md-2">
+        <%= f.submit "Add Task", class: "btn btn-success" %>
+      </div>
+    <% end %>
     </div>
-  </form>
-<% end %>
+    <div class="row"></div>
 
- 
-
+    <% project.tasks.each do |task| %>
+      <div class="row" id="task-row">
+        <div class="col-md-1"><input type="checkbox"></div>
+        <div class="col-md-8" id="task-name-cell"><%= task.name %></div>
+        <div class="col-md-1"><span class="glyphicon glyphicon-move"></span></div>
+        <div class="col-md-1">
+          <%= link_to "<span class='glyphicon glyphicon-pencil'></span>".html_safe, '#' %>
+        </div>
+        <div class="col-md-1">
+          <%= link_to "<span class='glyphicon glyphicon-trash'></span>".html_safe, [project, task],  method: :delete %>
+        </div>
+      </div>
+      <br>
+      <br>
+    <% end %>
+  <% end %>
+  <%= link_to "Add TODO List", todo_path, class: "btn btn-lg btn-primary" %>
+</div>
