--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -9,11 +9,15 @@
 
 /* universal */
 
+.white {
+  color: #fff;
+}
+
 #project-header-row {
   background-color: #428bca;
   margin-top: 20px;
   padding: 20px;
-  color: white;
+
 }
 
 #project-name-cell {
