--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -4,13 +4,15 @@
   <br>
   <% @projects.each do |project| %>
     <div class="row" id="project-header-row">
-      <div class="col-md-1"><span class="glyphicon glyphicon-calendar"></span></div>
-      <div class="col-md-8" id="project-name-cell"><%= project.name %></div>
-      <div class="col-md-1">
-        <%= link_to "<span class='glyphicon glyphicon-pencil'></span>".html_safe, edit_project_path(project) %>
+      <div class="col-md-1"><span class="glyphicon glyphicon-calendar white"></span></div>
+      <div class="col-md-8 white" id="project-name-cell">
+        <%= project.name %>
       </div>
       <div class="col-md-1">
-        <%= link_to "<span class='glyphicon glyphicon-trash'></span>".html_safe, project, method: :delete, data: {confirm: "Are you sure?"} %>
+        <%= link_to "<span class='glyphicon glyphicon-pencil white'></span>".html_safe, edit_project_path(project) %>
+      </div>
+      <div class="col-md-1">
+        <%= link_to "<span class='glyphicon glyphicon-trash white'></span>".html_safe, project, method: :delete, data: {confirm: "Are you sure?"} %>
       </div>
     </div>
 
@@ -35,7 +37,7 @@
         <div class="col-md-8" id="task-name-cell"><%= task.name %></div>
         <div class="col-md-1"><span class="glyphicon glyphicon-move"></span></div>
         <div class="col-md-1">
-          <%= link_to "<span class='glyphicon glyphicon-pencil'></span>".html_safe, '#' %>
+          <%= link_to "<span class='glyphicon glyphicon-pencil'></span>".html_safe, edit_project_task_path(project, task) %>
         </div>
         <div class="col-md-1">
           <%= link_to "<span class='glyphicon glyphicon-trash'></span>".html_safe, [project, task],  method: :delete %>
