--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
   <footer class="footer center">
     <small>&copy; Ruby Garage</small>
   </footer>
+  <%= debug(params) if Rails.env.development? %>
    </div>
   </body>
 </html>
