--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,17 +10,7 @@
   </head>
 
   <body>
-  <header class="navbar navbar-fixed-top navbar-inverse">
-    <div class="container">
-      <nav>
-        <ul class="nav navbar-nav navbar-right">
-          <li><%= link_to "Home",   root_path %></li>
-          <li><%= link_to "Log in", '#' %></li>
-          <li><%= link_to "Log out", '#' %></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+  <%= render 'layouts/header' %>
     <div class="container">
     <%= yield %>
       <% flash.each do |message_type, message| %>
