--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @project, local: true) do |f| %>
+<%= form_with(model: [current_user, @project], local: true) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
 
     <%= f.label :name %>
