Finish user signup

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,9 @@
-<h1> TODO List App home</h1>
-<p>This is the home page for the simple TODO List App</p>
+<div class="center jumbotron">
+  <h1>Welcome to the Sample TODO List App</h1>
+
+  <h2>
+    This is the home page for the sample application.
+  </h2>
+
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+</div>
