--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       <% end %>
       <%= yield %>
   <footer class="footer center">
-    <small>&copy; Ruby Garage</small>
+    <small>&copy; My Company</small>
   </footer>
   <%= debug(params) if Rails.env.development? %>
    </div>
